Fix make not picking up semver from git archive builds. Fixes #1380.

--- a/static/public/templates/index.html
+++ b/static/public/templates/index.html
@@ -28,10 +28,11 @@
 			<div class="logo">
 				<a href="{{ if .EnablePublicSubPage }}{{ .RootURL}}/subscription/form{{ end }}">
 				{{ if ne .LogoURL "" }}
-					<img src="{{ .LogoURL }}" alt="{{ .Data.Title }}" /></a>
+					<img src="/public/static/logo.png" alt="{{ .Data.Title }}" /></a>
 				{{ else }}
-					<img src="/public/static/logo.svg" alt="{{ .Data.Title }}" />
+					<img src="/public/static/logo.png" alt="{{ .Data.Title }}" />
 				{{ end }}
+				<script>console.log("yash")</script>
 				</a>
 			</div>
 		</header>
